# arm-distro

./: project-plan.md
configs/archiso/: profiledef.sh
docs/: SETUP.md
installer/: Cargo.toml
installer/src/: controller.rs  logging.rs  main.rs  state.rs
installer/src/backend/: boot.rs  cleanup.rs  command.rs  config.rs  disk.rs  filesystem.rs  mod.rs  packages.rs  partition.rs  tasks.rs
installer/src/ui/: mod.rs
installer/ui/: main.slint
scripts/: build_iso.sh  repack_archboot.sh
