[package]
name = "installer"
version = "0.1.0"
edition = "2021"
authors = ["Arm Distro Team"]
description = "Arch ARM installer with Slint UI"
license = "MIT"

[dependencies]
slint = { version = "1.13", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-winit-software"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process"] }
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1"
parking_lot = "0.12"

[build-dependencies]
slint-build = "1.5"

[package.metadata]
target = "aarch64-unknown-linux-gnu"
